# PaGeRo

./: CMakeLists.txt  LICENSE  README.md
include/: geometry.cuh  kinematics.cuh  loader.cuh  math.cuh  robot.cuh
robots/: 3DOFRoboticArm.urdf  4DOFRoboticArm.urdf
src/: loader.cu
test/: test_loading.cu  test_robot_viz.cu  test_sdf.cu  test_viz.cu
visualization/include/: camera.cuh  gl_include.cuh  visualization.cuh
visualization/shaders/: frag.shader
visualization/src/: camera.cu  visualization.cu
